peer-auth-strict.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: default
  namespace: "istioinaction"
spec:
  mtls:
    mode: STRICT
