service-a-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a-routing
spec:
  hosts:
  - "*"
  gateways:
  - service-a-gateway
  http:
  - route:
    - destination:
        host: service-a
