service-c-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - "service-c.istioinaction.svc.cluster.local"
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: service-c
        subset: version-v1
